// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Expand Snapshots Expanded true 1`] = `
<div
  className="sc-AykKD erepSp"
>
  <button
    aria-controls=""
    aria-expanded={true}
    className="sc-AykKE ljqBiq"
    id="2"
    onClick={[Function]}
    title=""
  >
    <span>
      <p>
        Body
      </p>
    </span>
    <svg
      className="sc-AykKC klijKE"
      height="7"
      viewBox="0 0 33 20"
      width="12"
    >
      <path
        d="M16.5 12.15L28.19.87c.52-.5 1.35-.5 1.87.01l2.05 2.02a1.3 1.3 0 0 1 0 1.86L17.44 19.12a1.36 1.36 0 0 1-1.88 0L.9 4.76A1.3 1.3 0 0 1 .89 2.9L2.94.88c.52-.5 1.35-.5 1.87 0L16.5 12.14v.01z"
      />
    </svg>
  </button>
  <div
    aria-labelledby="2"
    className="sc-AykKF eLMeQX"
    id=""
  >
    <p>
      Body
    </p>
  </div>
</div>
`;

exports[`Expand Snapshots No children 1`] = `
<div
  className="sc-AykKD erepSp"
/>
`;

exports[`Expand Snapshots No props 1`] = `
<div
  className="sc-AykKD erepSp"
>
  <button
    aria-controls=""
    aria-expanded={false}
    className="sc-AykKE ljqBiq"
    id="2"
    onClick={[Function]}
    title=""
  >
    <span>
      <p>
        Body
      </p>
    </span>
    <svg
      className="sc-AykKC iAOuZP"
      height="7"
      viewBox="0 0 33 20"
      width="12"
    >
      <path
        d="M16.5 12.15L28.19.87c.52-.5 1.35-.5 1.87.01l2.05 2.02a1.3 1.3 0 0 1 0 1.86L17.44 19.12a1.36 1.36 0 0 1-1.88 0L.9 4.76A1.3 1.3 0 0 1 .89 2.9L2.94.88c.52-.5 1.35-.5 1.87 0L16.5 12.14v.01z"
      />
    </svg>
  </button>
</div>
`;

exports[`Expand Snapshots With console 1`] = `
<div
  className="sc-AykKD erepSp"
>
  <button
    aria-controls="Title"
    aria-expanded={false}
    className="sc-AykKE ljqBiq"
    id="Title2"
    onClick={[Function]}
    title="Title"
  >
    <span>
      <p>
        Body
      </p>
    </span>
    <svg
      className="sc-AykKC iAOuZP"
      height="7"
      viewBox="0 0 33 20"
      width="12"
    >
      <path
        d="M16.5 12.15L28.19.87c.52-.5 1.35-.5 1.87.01l2.05 2.02a1.3 1.3 0 0 1 0 1.86L17.44 19.12a1.36 1.36 0 0 1-1.88 0L.9 4.76A1.3 1.3 0 0 1 .89 2.9L2.94.88c.52-.5 1.35-.5 1.87 0L16.5 12.14v.01z"
      />
    </svg>
  </button>
</div>
`;

exports[`Expand Snapshots With title 1`] = `
<div
  className="sc-AykKD erepSp"
>
  <button
    aria-controls="Title"
    aria-expanded={false}
    className="sc-AykKE ljqBiq"
    id="Title2"
    onClick={[Function]}
    title="Title"
  >
    <span>
      <p>
        Body
      </p>
    </span>
    <svg
      className="sc-AykKC iAOuZP"
      height="7"
      viewBox="0 0 33 20"
      width="12"
    >
      <path
        d="M16.5 12.15L28.19.87c.52-.5 1.35-.5 1.87.01l2.05 2.02a1.3 1.3 0 0 1 0 1.86L17.44 19.12a1.36 1.36 0 0 1-1.88 0L.9 4.76A1.3 1.3 0 0 1 .89 2.9L2.94.88c.52-.5 1.35-.5 1.87 0L16.5 12.14v.01z"
      />
    </svg>
  </button>
</div>
`;

exports[`Expand Snapshots hide icon 1`] = `
<div
  className="sc-AykKD erepSp"
>
  <button
    aria-controls=""
    aria-expanded={false}
    className="sc-AykKE ljqBiq"
    id="2"
    onClick={[Function]}
    title=""
  >
    <span>
      <p>
        Body
      </p>
    </span>
  </button>
</div>
`;

exports[`Expand Snapshots invalid Expand 1`] = `
<div
  className="sc-AykKD erepSp"
>
  <button
    aria-controls=""
    aria-expanded="true"
    className="sc-AykKE ljqBiq"
    id="2"
    onClick={[Function]}
    title=""
  >
    <span>
      <p>
        Body
      </p>
    </span>
    <svg
      className="sc-AykKC klijKE"
      height="7"
      viewBox="0 0 33 20"
      width="12"
    >
      <path
        d="M16.5 12.15L28.19.87c.52-.5 1.35-.5 1.87.01l2.05 2.02a1.3 1.3 0 0 1 0 1.86L17.44 19.12a1.36 1.36 0 0 1-1.88 0L.9 4.76A1.3 1.3 0 0 1 .89 2.9L2.94.88c.52-.5 1.35-.5 1.87 0L16.5 12.14v.01z"
      />
    </svg>
  </button>
  <div
    aria-labelledby="2"
    className="sc-AykKF eLMeQX"
    id=""
  >
    <p>
      Body
    </p>
  </div>
</div>
`;
